[ADD] CRUD farms + swagger
