# apps/core-api/internal/dto/farm_dto.go
@@ -6,20 +6,21 @@ type CreateFarmRequest struct {
 	LeaderID int    `json:"leader_id"`
 }
 
-type FarmResponse struct {
-	ID       int    `json:"id"`
-	Name     string `json:"name"`
-	Location string `json:"location"`
-	LeaderID int    `json:"leader_id"`
-}
-
 type UpdateFarmRequest struct {
 	Name     string `json:"name" validate:"required"`
 	Location string `json:"location" validate:"required"`
 	LeaderID int    `json:"leader_id"`
 }
 
-// type ShowAllFarms struct {
-// 	Farm  []FarmResponse `json:"farms"`
-// 	Total int            `json:"total"`
-// }
+type FarmResponse struct {
+	ID       int         `json:"id"`
+	Name     string      `json:"name"`
+	Location string      `json:"location"`
+	Leader   *UserSimple `json:"leader,omitempty"`
+}
+
+type UserSimple struct {
+	ID    int    `json:"id"`
+	Name  string `json:"name"`
+	Phone string `json:"phone"`
+}
