# apps/core-api/internal/handler/farm_handler.go
@@ -16,6 +16,17 @@ func NewFarmHandler(farmUC usecase.FarmUsecase) *FarmHandler {
 	return &FarmHandler{farmUC: farmUC}
 }
 
+// CreateFarm godoc
+// @Summary Create new farm
+// @Description Membuat Farm baru
+// @Tags Farms
+// @Accept json
+// @Produce json
+// @Param request body dto.CreateFarmRequest true "Create Farm"
+// @Success 201 {object} dto.FarmResponse
+// @Failure 400 {object} map[string]string
+// @Failure 500 {object} map[string]string
+// @Router /farms [post]
 func (h *FarmHandler) CreateFarm(c *fiber.Ctx) error {
 	var req dto.CreateFarmRequest
 
@@ -36,7 +47,7 @@ func (h *FarmHandler) CreateFarm(c *fiber.Ctx) error {
 	farm, err := h.farmUC.CreateFarm(c.Context(), req)
 	if err != nil {
 		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
-			"message": "failder",
+			"message": "failed",
 			"error":   err.Error(),
 		})
 	}
@@ -47,6 +58,15 @@ func (h *FarmHandler) CreateFarm(c *fiber.Ctx) error {
 	})
 }
 
+// GetFarm godoc
+// @Summary get farm By id
+// @Description Ambil data farm berdasarkan ID
+// @tags Farms
+// @Produce json
+// @Param id path int true "Farm ID"
+// @Success 200 {object} dto.FarmResponse
+// @Failure 404 {object} map[string]string
+// @Router /farms/{id} [get]
 func (h *FarmHandler) GetFarm(c *fiber.Ctx) error {
 
 	id, err := c.ParamsInt("id")
@@ -71,6 +91,17 @@ func (h *FarmHandler) GetFarm(c *fiber.Ctx) error {
 	})
 }
 
+// UpdateFarm godoc
+// @Summary Update user
+// @Description Update data user
+// @Tags Farms
+// @Accept json
+// @Produce json
+// @Param id path int true "Farm ID"
+// @Param request body dto.UpdateFarmRequest true "Update Farm"
+// @Success 200 {object} dto.FarmResponse
+// @Failure 400 {object} map[string]string
+// @Router /farms/{id} [put]
 func (h *FarmHandler) UpdateFarm(c *fiber.Ctx) error {
 	id, err := c.ParamsInt("id")
 
@@ -111,7 +142,15 @@ func (h *FarmHandler) UpdateFarm(c *fiber.Ctx) error {
 	})
 }
 
-func (h *FarmHandler) DeleteUser(c *fiber.Ctx) error {
+// DeleteFarm godoc
+// @Summary Delete farm
+// @Description Hapus farm
+// @Tags Farms
+// @Param id path int true "Farms ID"
+// @Success 204
+// @Failure 400 {object} map[string]string
+// @Router /farms/{id} [delete]
+func (h *FarmHandler) DeleteFarm(c *fiber.Ctx) error {
 	id, err := c.ParamsInt("id")
 
 	if err != nil {
@@ -134,4 +173,29 @@ func (h *FarmHandler) DeleteUser(c *fiber.Ctx) error {
 		"message": "success",
 	})
 
+}
+
+// GetAllFarms godoc
+// @Summary Get all farms
+// @Description Mengambil semua data user
+// @Tags Farms
+// @Produce json
+// @Success 200 {object} map[string]interface{}
+// @Failure 500 {object} map[string]string
+// @Router /farms [get]
+func (h *FarmHandler) GetAllFarms(c *fiber.Ctx) error {
+
+	farms, err := h.farmUC.GetAllFarms(c.Context())
+	if err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"message": "failed",
+			"error":   err.Error(),
+		})
+	}
+
+	return c.Status(fiber.StatusOK).JSON(fiber.Map{
+		"message": "success",
+		"farms":   farms,
+		"total":   len(farms),
+	})
 }
